--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,5 +1,5 @@
 .hero
-    background: #fac7c7 url('../img/hero/hero-bbg.jpg') no-repeat center top 80px
+    background: #fac7c7 url('../img/hero/hero-b.jpg') no-repeat center top 80px
     background-size: contain
     padding-top: 180px
     padding-bottom: 270px
