--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -9,7 +9,6 @@
         display: flex
         align-items: center
         justify-content: space-between
-        min-height: 80px
     &_mobile, &__landline
         text-align: right
     &__phone
@@ -34,7 +33,7 @@
     background-color: $primary
     color: #ffffff
     transition: 0.2s
-    transform: translateY(-100%)
+    transform: translateY(-200%)
     &_active
         transform: translateY(0)
     &__nav
@@ -75,3 +74,17 @@
         font-size: 14px
         color: $text-color-light
         font-size: 14px
+@media (max-width: 991px)
+    .navbar
+        &_mobile, &__landline
+            display: none
+@media (max-width: 576px)
+    .logo
+        display: none
+    .menu
+        top: 60px
+        transform: translateY(0)
+        &-button
+            height: 60px
+        &__nav
+            flex-direction: column
