--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,8 +1,9 @@
 .hero
-    background: #fac7c7 url('../img/hero/hero-b.jpg') no-repeat center top 80px
-    background-size: contain
-    padding-top: 180px
+    background: #c1c1c1 url('../img/hero/hero-b.jpg') no-repeat center top 
+    background-size: cover
+    padding-top: 120px
     padding-bottom: 270px
+    margin-top: 80px
     &__title
         font-size: 30px
         margin-bottom: 40px
@@ -11,3 +12,7 @@
         margin-bottom: 70px
         font-size: 30px
         +bold
+@media (max-width: 991px)
+    .hero
+        background-size: 100%
+        background-position: top right
