--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -34,8 +34,10 @@
     color: #ffffff
     transition: 0.2s
     transform: translateY(-200%)
+    opacity: 0
     &_active
         transform: translateY(0)
+        opacity: 1
     &__nav
         display: flex
         align-items: center
@@ -83,8 +85,10 @@
         display: none
     .menu
         top: 60px
-        transform: translateY(0)
         &-button
             height: 60px
         &__nav
             flex-direction: column
+        &__link
+            margin-bottom: 20px
+            
