--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -16,6 +16,29 @@ body
     background-color: $primary
     color: #ffffff
     +bold
+.bg-secondary
+    background: $bg-secondary
+.input
+    height: 80px
+    padding-left: 30px
+    border: 1px solid #dddddd
+input[type="checkbox"]
+    display: none
+    &:checked + label:before
+         background-color: $primary
+.checkbox
+    &-label
+        display: flex
+        align-items: center
+        margin-right: 40px
+        &:hover
+            cursor: pointer
+        &:before
+            content: ''
+            width: 30px
+            height: 30px
+            border: 1px solid #dddddd   
+            margin-right: 20px 
 @media (max-width: 576px)
     .button-o
         font-size: 10px
