--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,6 +1,15 @@
 body
     +light
     color: $text-color
+.section
+    padding: 100px 0
+    &-title
+        font-size: 30px
+        +bold
+        text-align: center
+        text-transform: uppercase
+    &__title
+        margin-bottom: 100px
 .button-o
     border: 2px solid $primary
     padding: 17px 22px 
@@ -42,3 +51,7 @@ input[type="checkbox"]
 @media (max-width: 576px)
     .button-o
         font-size: 10px
+    .section
+        padding: 60px 0
+        &-title
+            font-size: 24px
