--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,7 +13,11 @@
 //Блок hero
 @import 'blocks/hero'
 
-//Блок offer
+//Блок с формой и расчётом стоимости
 @import 'blocks/offer'
-//Блок offer
+//Блок Наши преимущества
 @import 'blocks/features'
+//Блок Каталог
+@import 'blocks/catalog'
+//Блок Каталог
+@import 'blocks/blog-list'
