--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -29,6 +29,8 @@ img
     background-color: $primary
     color: #ffffff
     +bold
+    &:hover
+        cursor: pointer
     &-fitting
         color: $primary
         background-color: #fff
@@ -65,8 +67,10 @@ input[type="checkbox"]
             border: 1px solid #dddddd   
             margin-right: 20px 
 @media (max-width: 576px)
-    .button-o
+    .button
         font-size: 10px
+        &-o
+            font-size: 10px
     .section
         padding: 60px 0
         &-title
