--- a/sass/blocks/_blog-list.sass
+++ b/sass/blocks/_blog-list.sass
@@ -2,7 +2,7 @@
     &__heading
         display: flex
         align-items: center
-        justify-content: space-between
+        justify-content: space-around
         margin-bottom: 70px
     &__title
         font-size: 24px
@@ -12,7 +12,7 @@
         font-size: 16px
     &-list
         display: flex
-        justify-content: space-between
+        justify-content: space-around
         flex-wrap: wrap
         &__image
             height: 200px
@@ -33,7 +33,6 @@
             &__card
                 margin-right: 30px
                 margin-left: 30px
-                max-width: 250px
 
 
 
