--- a/sass/style.sass
+++ b/sass/style.sass
@@ -19,5 +19,5 @@
 @import 'blocks/features'
 //Блок Каталог
 @import 'blocks/catalog'
-//Блок Каталог
 @import 'blocks/blog-list'
+@import 'blocks/price'
