Свёрстан блок с этапами работ

--- a/css/style.css
+++ b/css/style.css
@@ -766,7 +766,7 @@ input[type="checkbox"]:checked + label:before {
   bottom: -80px;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 1199px) {
   .price-block {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
@@ -781,6 +781,69 @@ input[type="checkbox"]:checked + label:before {
 @media (max-width: 400px) {
   .price-block__card {
     margin: 10px;
+  }
+}
+
+.step {
+  position: relative;
+  text-align: center;
+}
+
+.step__title {
+  font-size: 18px;
+}
+
+.step:last-child:before {
+  display: none;
+}
+
+.step:before {
+  content: '';
+  width: 100%;
+  height: 2px;
+  background-color: rgba(126, 123, 120, 0.8);
+  display: block;
+  position: absolute;
+  top: 25%;
+  right: -63%;
+}
+
+.step__text {
+  max-width: 160px;
+  margin: auto;
+  margin-bottom: 30px;
+}
+
+.steps {
+  background-color: #f1f1f1;
+}
+
+.steps-block {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+
+@media (max-width: 991px) {
+  .step {
+    width: 33%;
+  }
+  .step:before {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .step {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
