--- a/sass/blocks/_offer.sass
+++ b/sass/blocks/_offer.sass
@@ -1,11 +1,15 @@
 .offer
     padding: 129px 0
     &-block
-        background: #fff url('../img/offer/form-bg.jpg') no-repeat center right
-        background-size: contain
         box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1)
         padding: 80px
         margin-top: -200px
+        &_calc-bg
+            background: #fff url('../img/offer/form-bg-calc.jpg') no-repeat center right
+            background-size: contain
+        &_price-bg
+            background: #fff url('../img/offer/form-bg-price.jpg') no-repeat center right
+            background-size: contain
     &__title
         font-size: 25px
         text-transform: uppercase
@@ -15,12 +19,13 @@
         display: block
         font-size: 21px
         margin-bottom: 48px
+        max-width: 820px
 .form
     &__row
         display: flex
         align-items: center
         max-width: 900px
-        margin-bottom: 25px
+        margin-bottom: 30px
         &:last-child
             margin-bottom: 0
     &__label
@@ -37,16 +42,22 @@
     &__button
         height: 80px
         width: 100%
+    &__policy
+        display: inline-block
+        margin-left: 45px
+        font-size: 17px
 @media (max-width: 1199px)
     .offer
         &-block
             background-position: center right -120px
-@media (max-width: 768px)
+@media (max-width: 991px)
     .offer
         &-block
             background: none
             background-color: #fff
             padding: 40px
+@media (max-width: 768px)
+    .offer       
         &__title
             font-size: 18px
         &__subtitle
@@ -61,6 +72,9 @@
             width: 100%
         &__input
             margin-bottom: 20px
+        &__policy
+            margin-left: 0
+            margin-top: 30px
 @media (max-width: 480px)
     .form
         &__row
