--- a/sass/blocks/_factory.sass
+++ b/sass/blocks/_factory.sass
@@ -5,7 +5,7 @@
         flex-wrap: wrap
         &__text
             margin-left: 70px
-            flex-basis: : 50%
+            flex-basis: 50%
             font-size: 20px
         &__image
             margin: 20px 0
